...
        let allCharactersVC = CharacterCollectionViewController(manager: APICharacterCollection.self)
        #endif
        
        let favoritesCharactersVC = CharacterCollectionViewController(manager: FavoriteCharacterCollectionViewModel.self)
        
        let names = [
            "Characters",
            "Favorites"
        ]
        
        let icons = [
            "list.bullet",
            "star"
...
