...
        
        self.charactersCollectionView.leadingAnchor.constraint(equalTo: self.view.leadingAnchor).isActive = true
        self.charactersCollectionView.trailingAnchor.constraint(equalTo: self.view.trailingAnchor).isActive = true
            
        self.charactersCollectionView.bottomAnchor.constraint(equalTo: self.view.bottomAnchor).isActive = true
    
        self.charactersCollectionView.accessibilityIdentifier = "CharactersCollectionView"
    }
    
    func setupLoadingView() {
        
        self.view.addSubview(self.loadingView)
        
...
