...
    
    private func commonInit() {
        self.setupImage()
        self.setupNameLabel()
        self.setupStatusLabel()
        
        self.accessibilityIdentifier = "CharactersCollectionViewCell"
    }
    
    override init(frame: CGRect) {
        super.init(frame: frame)
        
        self.commonInit()
...
