...
        
        let image = UIImage(systemName: self.model.isFavorite() ? "star.fill" : "star")
        image?.accessibilityIdentifier = "starButton"
        
        self.navigationItem.rightBarButtonItem = .init(image: image, style: .done, target: self, action: #selector(self.onFavoriteChanged))
        
        self.navigationItem.rightBarButtonItem?.accessibilityIdentifier = "favoriteMenuItem"
    }
    
    func setupImageView() {
        self.view.addSubview(self.imageView)
        
        self.imageView.topAnchor.constraint(equalTo: self.view.topAnchor).isActive = true
...
